5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4143/executions/1723_2497.log
== TEST (2019-05-09 10:40:00) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

quantia= int(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = (4.0/100)
saldo = quantia     # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo
while (t>1):
	rend = saldo * juros
	saldo = saldo + rend
	t = ????

print(round(saldo, 2)) # Exibicao de resultados

	

-- ERROR:
File "XXXX", line 17
    t = ????
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 10:44:15) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

q = int(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0/100
saldo = q      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo
while (teste>1):
	rend = saldo * juros
	saldo = saldo + rend
	t = 

print(round(saldo, 2)) # Exibicao de resultados

	


-- ERROR:
File "XXXX", line 17
    t = 
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 10:45:53) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

q = int(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0/100
saldo = q      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo
while (tempo>1):
	rend = saldo * juros
	saldo = saldo + rend
	t = tempo +1

print(round(saldo, 2)) # Exibicao de resultados

	


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    q = int(input())
ValueError: invalid literal for int() with base 10: '575.25'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 10:46:08) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

q = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0/100
saldo = q      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo
while (tempo>1):
	rend = saldo * juros
	saldo = saldo + rend
	t = tempo +1

print(round(saldo, 2)) # Exibicao de resultados

	


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    q = int(input())
ValueError: invalid literal for int() with base 10: '575.25'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 10:47:20) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

q = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0/100
saldo = q      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo
while (t>1):
	rend = saldo * juros
	saldo = saldo + rend
	t = tempo + 1

print(round(saldo, 2)) # Exibicao de resultados

	


-- OUTPUT:
575.25
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 10:48:01) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

q = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = (4.0/100)
saldo = q      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo
while (t>1):
	rend = saldo * juros
	saldo = saldo + rend
	t = tempo + 1

print(round(saldo, 2)) # Exibicao de resultados

	


-- OUTPUT:
575.25
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 10:51:39) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

q = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = (4.0/100)
saldo = q      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo
while (t>1):
	rend = saldo * juros
	saldo1 = saldo + rend
	t = tempo + 1

print(round(saldo1, 2)) 

	


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 19, in <module>
    print(round(saldo1, 2)) 
NameError: name 'saldo1' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 10:52:04) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

q = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = (4.0/100)
saldo = q      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo
while (t>1):
	rend = saldo * juros
	saldo = saldo + rend
	t = tempo + 1

print(round(saldo, 2)) 

	


-- OUTPUT:
575.25
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 10:53:36) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

q = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = (4.0/100)
saldo = q      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo
while (t>1):
	rend = saldo * juros
	saldo = saldo + rend
	t = tempo + 1
	print(round(saldo, 2)) 

-- OUTPUT:
575.25
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 10:55:30) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

q = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = (4.0/100)
saldo = q      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo 
while (t>0):
	rend = saldo * juros
	saldo = saldo + rend
	t = t - 1
	print(round(saldo, 2)) 

-- OUTPUT:
575.25
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 10:57:25) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

q = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = (4.0/100)
saldo = q      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo 
while (t>0):
	rend = saldo * juros
	saldo = saldo + rend
	t = t - 1
	print(round(saldo, 2)) 

-- OUTPUT:
575.25
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 10:57:52) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

q = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 0.04
saldo = q      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo 
while (t>0):
	rend = saldo * juros
	saldo = saldo + rend
	t = t - 1
	print(round(saldo, 2)) 

-- OUTPUT:
575.25
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 10:59:44) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

q = int(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 0.04
saldo = q      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo 
while (t>0):
	rend = saldo * juros
	saldo = saldo + rend
	t = t - 1
	print(round(saldo, 2)) 

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    q = int(input())
ValueError: invalid literal for int() with base 10: '575.25'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 11:00:34) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

q = int(input("Quantia inicial: "))
t = int(input("Tempo de investimento: "))
juros = 0.04
saldo = q      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo 
while (t>0):
	rend = saldo * juros
	saldo = saldo + rend
	t = t - 1
	print(round(saldo, 2)) 

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    q = int(input())
ValueError: invalid literal for int() with base 10: '575.25'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-09 11:06:57) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

q = int(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 0.04
saldo = q      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo 
while (tempo>1 and t<tempo):
	rend = saldo * juros
	saldo = saldo + rend
	t = t - 1
	print(round(saldo, 2)) 

-- EXECUTION TIME:
0.135571
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1723/2497/main.py", line 5, in <module>
    q = int(input())
ValueError: invalid literal for int() with base 10: '575.25'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-09 11:11:11) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

q = int(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 0.04
saldo = q      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo 
while (tempo>1 and t<tempo):
	rend = saldo * juros
	saldo = saldo + rend
	t = t + 1
	print(round(saldo, 2)) 

-- EXECUTION TIME:
0.20553
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1723/2497/main.py", line 5, in <module>
    q = int(input())
ValueError: invalid literal for int() with base 10: '575.25'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-09 11:11:54) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

q = int(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0
saldo = q      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo 
while (tempo>1 and t<tempo):
	rend = saldo * (juros/100)
	saldo = saldo + rend
	t = t + 1
	print(round(saldo, 2)) 

-- EXECUTION TIME:
0.196102
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1723/2497/main.py", line 5, in <module>
    q = int(input())
ValueError: invalid literal for int() with base 10: '575.25'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-09 11:12:17) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

q = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0
saldo = q      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo 
while (tempo>1 and t<tempo):
	rend = saldo * (juros/100)
	saldo = saldo + rend
	t = t + 1
	print(round(saldo, 2)) 

-- EXECUTION TIME:
0.136016
-- TEST CASE 1:
---- input:
575.25
6
---- correct output:
598.26
622.19
647.08
672.96
699.88
727.87
---- user output:
598.26
622.19
647.08
672.96
699.88
727.87
-- TEST CASE 2:
---- input:
825.4
3

---- correct output:
858.42
892.75
928.46
---- user output:
858.42
892.75
928.46
-- TEST CASE 3:
---- input:
1275.65
5
---- correct output:
1326.68
1379.74
1434.93
1492.33
1552.02
---- user output:
1326.68
1379.74
1434.93
1492.33
1552.02
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
